; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/crypto/extr_glue_helper.c_glue_xts_crypt_128bit_one.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/crypto/extr_glue_helper.c_glue_xts_crypt_128bit_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @glue_xts_crypt_128bit_one(i8* %0, i32* %1, i32* %2, i32* %3, i32 (i8*, i32*, i32*)* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32 (i8*, i32*, i32*)*, align 8
  %11 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 (i8*, i32*, i32*)* %4, i32 (i8*, i32*, i32*)** %10, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* %11, align 4
  %14 = load i32*, i32** %9, align 8
  %15 = call i32 @gf128mul_x_ble(i32* %14, i32* %11)
  %16 = load i32*, i32** %7, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 @u128_xor(i32* %16, i32* %17, i32* %11)
  %19 = load i32 (i8*, i32*, i32*)*, i32 (i8*, i32*, i32*)** %10, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i32 %19(i8* %20, i32* %21, i32* %22)
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = call i32 @u128_xor(i32* %24, i32* %25, i32* %11)
  ret void
}

declare dso_local i32 @gf128mul_x_ble(i32*, i32*) #1

declare dso_local i32 @u128_xor(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
